add of the run/ related endpoints
